# stolen-moments

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml  FUTURE.md  PLAN.md  TODO.md  build-web.sh  deploy-web.sh  game-time.js  index.html
.claude/: settings.json
.claude/hooks/: rust-fmt.sh  rust-gate.sh
docs/future/: configuration-system.md  facts-and-requirements.md  gameplay-primitives.md  navigation-ai-crates.md
src/: adversary.rs  billboard.rs  camera.rs  catch.rs  coins.rs  debug.rs  dungeon.rs  employee.rs  loading.rs  main.rs  persistence.rs  player.rs  props.rs  seed.rs  state.rs  time_loop.rs  vault.rs  wasm_compat.rs
src/adversary/: behaviour.rs  cone.rs  mod.rs  overlay.rs  path.rs  spawn.rs  vision.rs
src/level/: connect.rs  map.rs  mod.rs  noise.rs  render.rs  rooms.rs  source.rs
